// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formUtils > filterServices > should return a sorted array of unique services if the data source is bods 1`] = `
[
  {
    "dataSource": "bods",
    "destination": "Warrington",
    "endDate": "2023-09-23",
    "id": 4524,
    "lineId": "LineId2",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-09-01",
  },
  {
    "dataSource": "bods",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "LineId1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "LineId3",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > filterServices > should return a sorted array of unique services if the data source is bods 2`] = `
[
  {
    "dataSource": "bods",
    "destination": "Warrington",
    "endDate": "2023-08-10",
    "id": 4524,
    "lineId": "LineId2",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Oldham circular",
    "endDate": "2023-08-08",
    "id": 4513,
    "lineId": "LineId1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "LineId3",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > filterServices > should return a sorted array of unique services if the data source is tnds 1`] = `
[
  {
    "dataSource": "tnds",
    "destination": "Warrington",
    "endDate": "2023-09-23",
    "id": 4524,
    "lineId": "SL1",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-09-01",
  },
  {
    "dataSource": "tnds",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "SL1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "tnds",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "SL1",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > filterServices > should return a sorted array of unique services if the data source is tnds 2`] = `
[
  {
    "dataSource": "tnds",
    "destination": "Warrington",
    "endDate": "2023-08-10",
    "id": 4524,
    "lineId": "SL1",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "tnds",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "SL1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "tnds",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "SL1",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > removeDuplicateServices > should return an array of unique services filtered by ServiceCode if the data source is tnds 1`] = `
[
  {
    "dataSource": "tnds",
    "destination": "Warrington",
    "endDate": "2023-09-23",
    "id": 4524,
    "lineId": "SL1",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-09-01",
  },
  {
    "dataSource": "tnds",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "SL1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "tnds",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "SL1",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > removeDuplicateServices > should return an array of unique services filtered by ServiceCode if the data source is tnds 2`] = `
[
  {
    "dataSource": "tnds",
    "destination": "Warrington",
    "endDate": "2023-08-10",
    "id": 4524,
    "lineId": "SL1",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "tnds",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "SL1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "tnds",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "SL1",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > removeDuplicateServices > should return an array of unique services filtered by lineId if the data source is bods 1`] = `
[
  {
    "dataSource": "bods",
    "destination": "Warrington",
    "endDate": "2023-09-23",
    "id": 4524,
    "lineId": "LineId2",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-09-01",
  },
  {
    "dataSource": "bods",
    "destination": "Oldham circular",
    "endDate": "2023-08-10",
    "id": 4513,
    "lineId": "LineId1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "LineId3",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > removeDuplicateServices > should return an array of unique services filtered by lineId if the data source is bods 2`] = `
[
  {
    "dataSource": "bods",
    "destination": "Warrington",
    "endDate": "2023-08-10",
    "id": 4524,
    "lineId": "LineId2",
    "lineName": "100",
    "nocCode": "GONW",
    "operatorShortName": "Go North West",
    "origin": "Manchester",
    "serviceCode": "NW_04_GONW_100_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Oldham circular",
    "endDate": "2023-08-08",
    "id": 4513,
    "lineId": "LineId1",
    "lineName": "149",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "NMGH",
    "serviceCode": "NW_04_SCMN_149_1",
    "startDate": "2023-07-23",
  },
  {
    "dataSource": "bods",
    "destination": "Manchester",
    "endDate": null,
    "id": 4547,
    "lineId": "LineId3",
    "lineName": "253",
    "nocCode": "SCMN",
    "operatorShortName": "Stagecoach",
    "origin": "Partington",
    "serviceCode": "NW_04_SCMN_253_1",
    "startDate": "2023-08-15",
  },
]
`;

exports[`formUtils > sortFilterStops > should return a list of sorted stops 1`] = `
[
  {
    "atcoCode": "370020349",
    "bearing": "S",
    "busStopType": "MKD",
    "commonName": "Cross Street/Tannery Street",
    "direction": "outbound",
    "indicator": "at",
    "latitude": 53.358615412,
    "longitude": -1.370176766,
    "sequenceNumber": "1",
    "stopType": "BCT",
  },
  {
    "atcoCode": "370025442",
    "bearing": "SE",
    "busStopType": "MKD",
    "commonName": "Prospect Road/Everard Avenue",
    "direction": "inbound",
    "indicator": "adj",
    "latitude": 53.318371398,
    "longitude": -1.516408243,
    "sequenceNumber": "1",
    "stopType": "BCT",
  },
  {
    "atcoCode": "370020440",
    "bearing": "E",
    "busStopType": "MKD",
    "commonName": "Prospect Road/St Quentin Drive",
    "direction": "inbound",
    "indicator": "adj",
    "latitude": 53.317638172,
    "longitude": -1.512933989,
    "sequenceNumber": "2",
    "stopType": "BCT",
  },
  {
    "atcoCode": "370025334",
    "bearing": "SW",
    "busStopType": "MKD",
    "commonName": "Spa Lane/Spa Lane Croft",
    "direction": "outbound",
    "indicator": "at",
    "latitude": 53.35563306,
    "longitude": -1.368838473,
    "sequenceNumber": "3",
    "stopType": "BCT",
  },
  {
    "atcoCode": "370025332",
    "bearing": "S",
    "busStopType": "MKD",
    "commonName": "Spa Lane/Tannery Street",
    "direction": "outbound",
    "indicator": "adj",
    "latitude": 53.357876345,
    "longitude": -1.368099159,
    "sequenceNumber": "2",
    "stopType": "BCT",
  },
]
`;
